<resources>
    <string name="app_name">雷哥GMAT</string>
    <string name="str_test">-.-</string>
    <string name="str_dialog_apk_downloding_msg">正在下载客户端(%1$d %2$s)</string>
    <string name="str_update_apk_title">发现新版本</string>
    <string name="str_update_new_tip_content">每一次都带给你实质性的体验升级</string>
    <string name="str_update_apk_fail">下载失败</string>
    <string name="str_is_new_apk">已经是最新版本了!</string>
    <string name="str_update_apk_imme">立即更新</string>
    <string name="str_update_apk_wait">稍后更新</string>
    <string name="str_need_sdcard_permission">本功能需要读写SDCARD权限</string>
    <string name="camera_permission_required">本功能需要相机权限！</string>
    <string name="tip_title">请拖动裁剪框四角选择一行题目</string>
    <string name="no_tip">不在提示</string>
    <string name="go_on">继续</string>
    <string name="app_id">appid=59202bb2</string>
    <string name="text_begin">请开始说话…</string>
    <string name="str_login_pw_hint">请输入5～16位密码</string>
    <string name="str_login_account">请输入手机号/邮箱</string>
    <string name="str_register_account">请输入手机号/邮箱</string>
    <string name="str_enter_auth_code">请输入验证码</string>
    <string name="str_regsiter_sendauthcode">获取验证码</string>
    <string name="str_enter_username">用户名：数字+字母</string>
    <string name="str_has_account">已有账号，立即登录</string>
    <string name="str_login">登录</string>
    <string name="str_login_onfail">登录失败</string>
    <string name="str_login_loading">登录中...</string>
    <string name="str_forget_ps">忘记密码</string>
    <string name="str_immde_register">立即注册</string>
    <string name="str_use_qq_login">使用QQ登录</string>
    <string name="str_set_new_pwd">设置新密码</string>
    <string name="str_confirm_pwd">确认新密码</string>
    <string name="str_confirm">确定</string>
    <string name="str_confirm_re">确认</string>
    <string name="str_cancel">取消</string>
    <string name="str_update">更新</string>
    <string name="str_please_choose_pic">请选择图片</string>
    <string name="str_account_error">请输入手机号/邮箱，并获取验证码</string>
    <string name="str_pwd_not_null">密码不能为空</string>
    <string name="str_name_not_null">用户名不能为空</string>
    <string name="str_account_format_error">账号输入不正确</string>
    <string name="str_pwd_no_com">两次密码不一致</string>
    <string name="str_no_data_tip">这里什么都没有喔</string>
    <string name="str_new_set_nick_name_tip">2-8位，不可使用特殊字符，以后可随时更改</string>
    <string name="str_user_protocol_check_box">已阅读并同意</string>
    <string name="str_user_protocol">《用户协议》</string>
    <string name="str_user_protocol_title">用户协议</string>
    <string name="str_loading">正在加载中...</string>
    <string name="str_retry_load">重新加载</string>
    <string name="str_net_error_noconnection">没有网络连接，请检查网络连接</string>
    <string name="str_net_error_unknownerror">服务器异常,请稍后再试!</string>
    <string name="str_net_error_timeout">网络慢</string>
    <string name="str_loading_wait">请稍候…</string>
    <string name="str_net_error_404">对不起，系统正在维护中，请稍后访问！</string>
    <string name="str_make_test">做题模考</string>
    <string name="str_knowledge">小讲堂</string>
    <string name="str_pro_forma">备考社区</string>
    <string name="str_gmat">抢先课程</string>
    <string name="str_user_center">个人中心</string>
    <string name="str_topiclib_has_update">题库有更新咯~</string>
    <string name="str_update_ing">正在更新</string>
    <string name="str_update_end">更新完成</string>
    <string name="str_update_fail">更新失败</string>
    <string name="str_update_fail_hint">(请稍后重新更新)</string>
    <string name="evaluation_title">喜欢雷哥GMAT的做题模考功能吗？</string>
    <string name="evaluation_sec_title">去应用商店给个5星好评吧？</string>
    <string name="evaluation_one_btn_des">喜欢，给五星好评？</string>
    <string name="evaluation_two_btn_des">我要吐槽</string>
    <string name="evaluation_thr_btn_des">残忍拒绝</string>
    <string name="async_make_data_db_hint">点我，同步做题数据到电脑端啦</string>
    <string name="str_search_no_result">没有查找到相关内容</string>
    <string name="str_set_no_see_pwd">*&#160;*&#160;*&#160;*&#160;*&#160;*&#160;*</string>
    <string name="str_header_camera">拍照</string>
    <string name="str_header_photo">从相册选择</string>
    <string name="str_set_title">更多设置</string>
    <string name="str_user_info">个人信息</string>
    <string name="str_set_head">头像</string>
    <string name="str_set_name">用户名</string>
    <string name="str_set_nick_name">昵称</string>
    <string name="str_set_phone">电话</string>
    <string name="str_set_email">邮箱</string>
    <string name="str_set_pwd">密码</string>
    <string name="str_set_about_we">关于我们</string>
    <string name="str_set_gov_net">官方网站</string>
    <string name="str_contact_us_gov_wx">官方微信</string>
    <string name="str_contact_us_sina">新浪微博</string>
    <string name="str_contact_us_service_email">客服邮箱</string>
    <string name="str_contact_us_service_phone">客服电话</string>
    <string name="str_contact_us_contact_service">联系客服</string>
    <string name="str_contact_us_gov_wx_detal">雷哥&#160;GMAT&#160;与商科留学</string>
    <string name="str_contact_us_online">雷哥&#160;GMAT&#160;在线</string>
    <string name="str_contact_us_email_detail">service@gmatonline.cn</string>
    <string name="str_call_phone_no_permisson">拨打电话权限未授予</string>
    <string name="str_camera_no_permisson">相机权限未授予，去设置中心设置</string>
    <string name="str_read_external_no_permisson">相册权限未授予，去设置中心设置</string>
    <string name="str_contact_us_service_phone_num">400&#8211;1816&#8211;180</string>
    <string name="str_set_gmat_net">www.gmatonline.cn</string>
    <string name="str_set_wx_num">微信公众号</string>
    <string name="str_set_wx_num_info">LGclub</string>
    <string name="str_set_gmat_qq">雷哥GMAT QQ备考群</string>
    <string name="str_set_gmat_qq_number">439324846</string>
    <string name="str_set_clear_cache">清楚缓存</string>
    <string name="str_set_version">版本检测</string>
    <string name="str_set_font_size">字体大小</string>
    <string name="str_set_feed_back">意见反馈</string>
    <string name="str_set_exit">退出当前账户</string>
    <string name="str_set_modify_nick_name">修改昵称</string>
    <string name="str_set_nick_name_tip">请填写昵称</string>
    <string name="str_set_modify_com">与当前昵称一致，无须修改</string>
    <string name="str_set_modify_user_name_fail_tip">用户名不能修改</string>
    <string name="str_set_modify_phone_title">修改手机号</string>
    <string name="str_set_modify_email_title">修改邮箱</string>
    <string name="str_set_phone_tip">请填写手机号</string>
    <string name="str_set_email_tip">请填写邮箱</string>
    <string name="str_set_modify_phone_com">与当前手机号一致，无须修改</string>
    <string name="str_set_modify_email_com">与当前邮箱一致，无须修改</string>
    <string name="str_set_modify_phone_format">手机号格式错误</string>
    <string name="str_set_modify_email_format">邮箱格式错误</string>
    <string name="str_set_modify_old_pwd">请填写原密码</string>
    <string name="str_set_modify_new_pwd">请填写新密码</string>
    <string name="str_set_modify_pwd_title">修改密码</string>
    <string name="str_set_modify_pwd_judge">新旧密码一致，无须修改</string>
    <string name="str_set_copy_success">已拷贝至粘贴板</string>
    <string name="str_font_size_tip_info">拖动下面的滑块，可设置字体大小，设置后\n会改变题目练习、小讲堂的字体大小。\nA simple question</string>
    <string name="str_set_nick_title">先起一个闪亮亮的昵称吧</string>
    <string name="str_main_center_make_num">0</string>
    <string name="str_main_center_make_des">做题数量</string>
    <string name="str_main_center_make_avg_num">0%</string>
    <string name="str_main_center_make_avg">平均正确率</string>
    <string name="str_main_center_continue_make">继续做题</string>
    <string name="str_main_center_wrong_recording">错题记录</string>
    <string name="str_main_center_make_recording">做题记录</string>
    <string name="str_main_center_test_recording">模考记录</string>
    <string name="str_main_center_pay_test_recording">购课记录</string>
    <string name="str_main_center_my_keep">我的收藏</string>
    <string name="str_cancel_collection">取消收藏</string>
    <string name="str_main_center_msg">消息中心</string>
    <string name="str_main_center_my_file">我的文件</string>
    <string name="str_tourist">游客</string>
    <string name="str_no_nick_name">没有设置昵称</string>
    <string name="str_record_title">%1$s-%2$d</string>
    <string name="str_record_your_answer">你的答案：%1$s</string>
    <string name="str_record_correct_answer">正确答案：%1$s</string>
    <string name="str_join_discuss">参与讨论</string>
    <string name="str_topic_discuss">题目讨论</string>
    <string name="str_topic_ask_question">提问</string>
    <string name="str_answer_use_time">用时:%1$s</string>
    <string name="str_record_use_time">%1$s&#160;用时:%2$s&#160;%3$d人已做</string>
    <string name="str_topic_floor_hint">%1$d楼</string>
    <string name="str_topic_error_type">请选择错误类型</string>
    <string name="str_know_logic">逻辑CR</string>
    <string name="str_know_grammer">语法SC</string>
    <string name="str_know_read">阅读RC</string>
    <string name="str_know_math">数学Q</string>
    <string name="str_know_people_num_des"><![CDATA[共<font color="#eb9515">%1$d</font>知识点，<font color="#eb9515">%2$d</font>人已学习]]></string>
    <string name="str_collection_og">OG</string>
    <string name="str_collection_prep">PREP</string>
    <string name="str_collection_lecture">讲义</string>
    <string name="str_collection_gwd">GWD</string>
    <string name="str_collection_manhattan">Manhattan</string>
    <string name="str_remark_detail_title">文章详情</string>
    <string name="str_remark_new_msg_title">新消息</string>
    <string name="str_remark_detail_et_hint">我也说一句</string>
    <string name="str_post_remark">发表帖子</string>
    <string name="str_post_remark_enter_title">请输入标题</string>
    <string name="str_post_remark_enter_content">请输入内容</string>
    <string name="str_post">发表</string>
    <string name="str_simulation_test">仿真模考</string>
    <string name="str_difficulty_make">难度做题</string>
    <string name="str_diff_one_item">600以下</string>
    <string name="str_diff_two_item">600～650</string>
    <string name="str_diff_thr_item">650～680</string>
    <string name="str_diff_four_item">680～700</string>
    <string name="str_diff_five_item">700～730</string>
    <string name="str_diff_six_item">730以上</string>
    <string name="str_sim_language_title">语文套题</string>
    <string name="str_sim_language_des">69套模考全方位满足你的需求</string>
    <string name="str_sim_math_title">数学套题</string>
    <string name="str_sim_math_des">59套模考全方位满足你的需求</string>
    <string name="str_sim_all_title">全套套题</string>
    <string name="str_sim_all_des">59套模考全方位满足你的需求</string>
    <string name="str_test_gmat_report">Complete&#160;Report</string>
    <string name="str_sc_gmat_report">SC&#160;Report</string>
    <string name="str_rc_gmat_report">RC&#160;Report</string>
    <string name="str_cr_gmat_report">CR&#160;Report</string>
    <string name="str_q_gmat_report">Quant&#160;Report</string>
    <string name="str_main_left_center_setting">个人设置</string>
    <string name="str_main_left_about_us">关于我们</string>
    <string name="str_main_left_contact_us">联系我们</string>
    <string name="str_main_left_copyright_des">版权说明</string>
    <string name="str_special_hint">特别提示</string>
    <string name="str_user_protocol_one_des">\u3000\u3000雷哥网在此特别提醒您（用户）在注册成为用户之前，请认真阅读本《用户协议》（以下简称“协议”），以确保您充分理解本协议中各条款。您的注册、登录、使用等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。\n\u3000\u3000本协议约定雷哥网与用户之间关于“雷哥GMAT”应用软件服务使用的权利义务。本协议可由雷哥网随时更新，更新后的协议条款一旦公布即代替原来的协议条款，恕不再另行通知，用户继续使用雷哥GMAT应用软件提供的服务将被视为接受修改后的协议，用户可在本网站查阅最新版协议条款。</string>
    <string name="str_account_register">一、帐号注册</string>
    <string name="str_user_protocol_des">\u3000\u30001.用户注册成功后即成为雷哥网的合法用户，注册成功后会得到一个账号密码，用户用该账号进行做题等一切活动，并对自己的行为负责，由此行为产生的一切行为后果均由自己承担，雷哥网不承担任何责任。\n\u3000\u30002.在用户注册及雷哥网搜集的信息包括但不限于用户的昵称、电话、邮箱和密码；雷哥网同意对这些信息的使用将受限于第三条用户个人隐私信息保护的约束。</string>
    <string name="str_user_promise">二、用户承诺</string>
    <string name="str_disclaimer">三、免责声明</string>
    <string name="str_user_protocol_two_des">\u3000\u3000用户同意遵守《中华人民共和国保守国家秘密法》、《中华人民共和国著作权法》、《互联网电子公告服务管理规定》、《信息网络传播法保护条例》、《中华人民共和国计算机信息系统安全保护条例》等有关法律法规及政府部门的规定，一经发现，雷哥网将根据法律法规采取相应措施。</string>
    <string name="str_user_protocol_trh_des">\u3000\u3000雷哥GMAT APP为互联网服务提供商，为GMAT学习用户提供在线考试学习服务及沟通交流平台，根据《侵权责任法》以及《信息网络传播权保护条例》规定，对于用户个人的侵权及违法行为，雷哥网不承担民事责任。</string>
    <string name="str_user_protocol_title_arti">雷哥GMAT 用户注册协议</string>
</resources>