<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_black">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_left_personal_setting"
            style="@style/main_left_tv_style"
            android:text="@string/str_main_left_center_setting"/>

        <TextView
            android:id="@+id/main_left_about_us"
            style="@style/main_left_tv_style"
            android:text="@string/str_main_left_about_us"/>

        <TextView
            android:id="@+id/main_left_contact_us"
            style="@style/main_left_tv_style"
            android:text="@string/str_main_left_contact_us"/>

        <TextView
            android:id="@+id/main_left_copyright_des"
            style="@style/main_left_tv_style"
            android:text="@string/str_main_left_copyright_des"/>
    </LinearLayout>

</RelativeLayout>